objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_ID_Creation_Status_Code__c</fullName>
        <formula>Account.ID_Creation_Status_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID Creation Status Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Status__c</fullName>
        <formula>TEXT(Account.ID_Status2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>text(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_UUID__c</fullName>
        <formula>Billing_Account__r.UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Owner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <formula>Account.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliate_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>This field is used to store the alternate email id.</description>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ambassador_Tier__c</fullName>
        <label>Ambassador Tier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WeWork_ambassador__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavioral_Lead_Score__c</fullName>
        <description>Used for SFMC tracking Behavioral Lead Score</description>
        <label>Behavioral Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <description>This field shows the name of the related billing account.</description>
        <formula>Billing_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_UUID__c</fullName>
        <description>Field to capture and refer the Billing Account UUID</description>
        <formula>Billing_Account__r.UUID__c</formula>
        <label>Billing Account UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <label>Broker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <label>Broker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Brokerage_Company_Name__c</fullName>
        <label>Brokerage Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Address__c</fullName>
        <formula>Location__r.Address__c &amp; ", " &amp;  Location__r.City__c &amp; ", " &amp;  Location__r.State__c &amp; " " &amp; Location__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <description>Pulls Building Location without 3 character city reference</description>
        <formula>Location__r.Location_No_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI360_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unomy Company</label>
        <referenceTo>CICompany__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_User_Role__c</fullName>
        <formula>Custom_CRM_User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this contact is a CRM user, then this field is their CRM role</inlineHelpText>
        <label>CRM User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This field will store the name of the city</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Company_Name__c</fullName>
        <externalId>true</externalId>
        <label>Cleansed Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Unomy_Company_Name__c</fullName>
        <description>This field contains Cleansed Unomy Company Name value</description>
        <label>Cleansed Unomy Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <formula>IF(Account.Number_of_Full_Time_Employees__c != NULL , Text(Account.Number_of_Full_Time_Employees__c) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Id</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Show the HQ market of the Contact</description>
        <inlineHelpText>Show the HQ market of the Contact</inlineHelpText>
        <label>HQ market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Opportunity_Reservable__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Convert Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Activities__c</fullName>
        <description>Count of Activities under a Contact</description>
        <label>Count of Activities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_To_Delete__c</fullName>
        <label>Created To Delete</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom CRM User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demographic_Lead_Score_Adj__c</fullName>
        <description>The data team is going to send a demographic score from RedShift - this includes person attributes and pre-disposition to MQL...this value is an "aging" adjustment based upon time to process lead</description>
        <label>Demographic Lead Score Adj</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Lead_Score__c</fullName>
        <description>Used for SFMC tracking Demographic Lead Score</description>
        <label>Demographic Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_without_AC_Manager__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox to mark the contact not to be contacted with the Account Manager</description>
        <inlineHelpText>Checkbox to mark the contact not to be contacted with the Account Manager</inlineHelpText>
        <label>Do Not Contact without AC Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>RIGHT(Email,LEN(Email)-FIND('@',Email))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Quality__c</fullName>
        <description>Undeliverable: Email is invalid, domain doesn’t exist 
Deliverable: Valid Email, Domain exist 
Risky: Domain existed, but email may not exist 
Pending: Default Value 
Status of Email Id from Kickbox API</description>
        <inlineHelpText>Undeliverable: Email is invalid, domain doesn’t exist 
Deliverable: Valid Email, Domain exist 
Risky: Domain existed, but email may not exist 
Pending: Default Value 
Status of Email Id from Kickbox API</inlineHelpText>
        <label>Email Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>Deliverable</fullName>
                </value>
                <value>
                    <fullName>Risky</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Contact_Id__c</fullName>
        <description>18 digit Salesforce Id</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_Hidden__c</fullName>
        <externalId>true</externalId>
        <label>External ID (Hidden)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_ID__c</fullName>
        <label>Floor ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <label>Floor Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Time_Employees__c</fullName>
        <description>Formula field mapped from Number of Full Time Employees on Account</description>
        <formula>Account.Number_of_Full_Time_Employees__c</formula>
        <label>Full Time Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the geography of nearest HQ Market.</description>
        <inlineHelpText>Stores the geography of nearest HQ Market.</inlineHelpText>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Active_Journey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Active Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_DD__c</fullName>
        <formula>CONTAINS(Reservable__r.Name, "DD")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has DD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Creation_Status_Code__c</fullName>
        <label>ID Creation Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Error_Message__c</fullName>
        <label>ID Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Kind__c</fullName>
        <description>Legacy Field - Not in Use</description>
        <formula>IF (
  OR(
     ISPICKVAL(Account.Type , 'Member'),  
     ISPICKVAL(Account.Type , 'active'),
     ISPICKVAL(Account.Type , 'Previous Member')
  ),
  'member',
  'potential'
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Legacy Field - Not in Use</inlineHelpText>
        <label>Membership Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Last_Sync__c</fullName>
        <label>ID Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_Member_Type__c</fullName>
        <formula>IF( Account.Primary_Member__r.Id = Id , "Licensee", "Employee")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Member Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Art, Fashion, and Design</fullName>
                </value>
                <value>
                    <fullName>Business Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Financial Services and Insurance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Health/Beauty/Wellness</fullName>
                </value>
                <value>
                    <fullName>Healthcare &amp; Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Human Resources / Recruiting</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing, Social Media, and/or PR</fullName>
                </value>
                <value>
                    <fullName>Media and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Non-Profit/Causes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Technology - E-commerce</fullName>
                </value>
                <value>
                    <fullName>Technology - IT Products and Services</fullName>
                </value>
                <value>
                    <fullName>Technology - Software/App Development</fullName>
                </value>
                <value>
                    <fullName>Technology - Web Design</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation Services</fullName>
                </value>
                <value>
                    <fullName>Travel, Hospitality, and Lodging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks__c</fullName>
        <label>Interested in Number of Desk(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interesting_Moments__c</fullName>
        <description>Used for SFMC tracking Interesting Moments</description>
        <label>Interesting Moments</label>
        <length>34000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Member__c</fullName>
        <formula>IF( Billing_Account__r.Primary_Member__r.Id = Id, 
  true, 
  false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journey_Created_On__c</fullName>
        <description>This field will display the date of latest created journey which is related to lead.</description>
        <inlineHelpText>Contains the date of latest created journey related to this lead.</inlineHelpText>
        <label>Journey Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keycard_Batch__c</fullName>
        <label>Keycard Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keycard_Number__c</fullName>
        <label>Keycard Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kind__c</fullName>
        <label>Kind</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guest</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>WeWork Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Interesting_Moment_Description__c</fullName>
        <description>Last Interesting Moment Description</description>
        <inlineHelpText>Last Interesting Moment Description</inlineHelpText>
        <label>Last Interesting Moment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Interesting_Moment_Type__c</fullName>
        <description>Last Interesting Moment Type</description>
        <inlineHelpText>Last Interesting Moment Type</inlineHelpText>
        <label>Last Interesting Moment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource_Sub_Type__c</fullName>
        <label>Lead Source Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Source_Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_Adj__c</fullName>
        <description>Captures the Lead Demographic Score Adj of the Contact</description>
        <inlineHelpText>Captures the Lead Demographic Score Adj of the Contact</inlineHelpText>
        <label>Lead Demographic Score Adj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_DateTime__c</fullName>
        <description>Captures the time stamp when the Lead Demographic Score is updated on the Contact</description>
        <inlineHelpText>Captures the time stamp when the Lead Demographic Score is updated on the Contact</inlineHelpText>
        <label>Lead Demographic Score DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_Total__c</fullName>
        <description>Captures the total Lead Score of the Contact</description>
        <formula>(Lead_Demographic_Score__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the total Lead Score of the Contact</inlineHelpText>
        <label>Lead Demographic Score Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score__c</fullName>
        <description>Captures the Lead Demographic Score of the Contact</description>
        <inlineHelpText>Captures the Lead Demographic Score of the Contact</inlineHelpText>
        <label>Lead Demographic Score</label>
        <precision>12</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>This field captures the information from where the lead is coming.</description>
        <inlineHelpText>This field captures the information from where the lead is coming.</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>Shows current status of interaction with the contact</description>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trying to Reach</fullName>
                </value>
                <value>
                    <fullName>In Contact</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leads_Marketing_Email_Opens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads Marketing Email Opens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration__c</fullName>
        <description>If at lead stage or tour outcome point, we gather direct information about the lease (rent) term of the potential member, this field is filled manually</description>
        <label>Lease Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <description>Locale of the contact, this may be useful in future if we have any client facing communications in multiple language.</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>af</fullName>
                </value>
                <value>
                    <fullName>af-ZA</fullName>
                </value>
                <value>
                    <fullName>sq</fullName>
                </value>
                <value>
                    <fullName>sq-AL</fullName>
                </value>
                <value>
                    <fullName>gsw-FR</fullName>
                </value>
                <value>
                    <fullName>am-ET</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>ar-DZ</fullName>
                </value>
                <value>
                    <fullName>ar-BH</fullName>
                </value>
                <value>
                    <fullName>ar-EG</fullName>
                </value>
                <value>
                    <fullName>ar-IQ</fullName>
                </value>
                <value>
                    <fullName>ar-JO</fullName>
                </value>
                <value>
                    <fullName>ar-KW</fullName>
                </value>
                <value>
                    <fullName>ar-LB</fullName>
                </value>
                <value>
                    <fullName>ar-LY</fullName>
                </value>
                <value>
                    <fullName>ar-MA</fullName>
                </value>
                <value>
                    <fullName>ar-OM</fullName>
                </value>
                <value>
                    <fullName>ar-QA</fullName>
                </value>
                <value>
                    <fullName>ar-SA</fullName>
                </value>
                <value>
                    <fullName>ar-SY</fullName>
                </value>
                <value>
                    <fullName>ar-TN</fullName>
                </value>
                <value>
                    <fullName>ar-AE</fullName>
                </value>
                <value>
                    <fullName>ar-YE</fullName>
                </value>
                <value>
                    <fullName>hy</fullName>
                </value>
                <value>
                    <fullName>hy-AM</fullName>
                </value>
                <value>
                    <fullName>as-IN</fullName>
                </value>
                <value>
                    <fullName>az</fullName>
                </value>
                <value>
                    <fullName>az-Cyrl-AZ</fullName>
                </value>
                <value>
                    <fullName>az-Latn-AZ</fullName>
                </value>
                <value>
                    <fullName>ba-RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>